fix header spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,7 +63,7 @@ body{
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin: -54px 0 -250px 0;
+  margin: 0 0 -250px 0;
 }
 
 .push{
